# BlendResult

./: .gitignore  Cargo.toml  Readme.md  blend_results.rs
robot/: test_a.robot  test_b.robot  test_c.robot  test_d.robot  test_parser_c_expect.txt
src/: blend_result.rs  blend_results.rs  element.rs  lib.rs  main.rs  multi_result_list.rs  rf_parser.rs
tests/: common.rs  robot_basic.rs  test_ods_export.rs  test_robot_basic.rs
