[package]
name = "blend_result"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
colored = "3.0.0"
csv = "1.3.1"
log = "0.4.27"

quick-xml = "0.37.4"
simple_logger = "5.0.0"
